[package]
name = "acars_vdlm2_parser"
version = "0.2.1"
edition = "2021"
authors = ["Alex Austin"]
description = "Library for decoding and encoding ACARS and VDLM2 messages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"

[dev-dependencies]
rand = "0.8.5"
glob = "0.3.1"
chrono = "0.4.31"
humantime = "2.1.0"
prettytable-rs = "0.10.0"
rayon = "1.8.0"
thousands = "0.2.0"
byte-unit = "5.0.3"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
