[package]
name = "library_test"
description = "Utility for connecting to a VDLM/ACARS or ADSB server to decode data"
version = "0.1.0"
rust-version = "1.67.1"
edition = "2021"

[dependencies]
acars_vdlm2_parser = { path = "../../acars_vdlm2_parser" }
clap = { version = "4.1.4", features = ["derive", "env"] }
hex = "0.4.2"
log = "0.4.17"
log4rs = "1.2.0"
tokio = { version = "1.24.2", features = ["full", "tracing"] }
